--- a/Web.FlashMessage/Web.FlashMessage.nuspec
+++ b/Web.FlashMessage/Web.FlashMessage.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <title>FlashMessage</title>
     <authors>Vereyon</authors>
     <owners>Vereyon</owners>
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/Vereyon/FlashMessage</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>FlashMessage provides easy cross request notifications for ASP.NET MVC based on Twitter Bootstrap alerts.</description>
-    <releaseNotes>Initial release.</releaseNotes>
+    <releaseNotes>1.0.1: More messages methods avaliable</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>ASP.NET MVC PRG notification message flash</tags>
   </metadata>
