--- a/Web.FlashMessage.MvcExample/Views/Web.config
+++ b/Web.FlashMessage.MvcExample/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Web.FlashMessage.MvcExample" />
+        <add namespace="Vereyon.Web"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
