--- a/Web.FlashMessage.Package/Vereyon.Web.FlashMessage.nuspec
+++ b/Web.FlashMessage.Package/Vereyon.Web.FlashMessage.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Vereyon.Web.FlashMessage</id>
-    <version>1.1.0-beta1</version>
+    <version>1.1.0</version>
     <title>FlashMessage</title>
     <authors>Vereyon</authors>
     <owners>Vereyon</owners>
