--- a/Web.FlashMessage.Package/Vereyon.Web.FlashMessage.nuspec
+++ b/Web.FlashMessage.Package/Vereyon.Web.FlashMessage.nuspec
@@ -4,7 +4,7 @@
     <id>Vereyon.Web.FlashMessage</id>
     <version>1.2.0</version>
     <title>FlashMessage</title>
-    <authors>Vereyon</authors>
+    <authors>Christ Akkermans</authors>
     <owners>Vereyon</owners>
     <licenseUrl>https://github.com/Vereyon/FlashMessage/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/Vereyon/FlashMessage</projectUrl>
