--- a/Web.FlashMessage.Core/Web.FlashMessage.Core.csproj
+++ b/Web.FlashMessage.Core/Web.FlashMessage.Core.csproj
@@ -10,7 +10,7 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <Version>2.0.0-beta2</Version>
+    <Version>2.0.0</Version>
     <RootNamespace>Vereyon.FlashMessage</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
