--- a/Web.FlashMessage.Core.Tests/Web.FlashMessage.Core.Tests.csproj
+++ b/Web.FlashMessage.Core.Tests/Web.FlashMessage.Core.Tests.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="JsonContractFlashMessageSerializerTests.cs" />
+  </ItemGroup>
+
 </Project>
